@@ -14,6 +14,10 @@ This NEWS file summarises the main changes.
 
 NEW FEATURES
 
+  o  FR #4677 has been addressed - eval will now be evaluated anywhere in a j-expression as long as
+     it has just one argument. Will still need to use .SD as environment in complex cases. Accidentally
+     fixed bug noticed here: http://stackoverflow.com/a/19054962/817778
+
   o  can set key from `[.data.table` using a new "key" argument. This is for convenience and to
      address FR #4675 to some degree - the difference from the FR is that the key is not set temporarily
      but rather is a permanent change.
